--- a/nodejs/resource-server/package.json
+++ b/nodejs/resource-server/package.json
@@ -2,15 +2,15 @@
     "name": "keycloak-resource-server",
     "type": "module",
     "scripts": {
-      "start": "node app.js"
-
+        "start": "node app.js"
     },
     "dependencies": {
-      "@keycloak/keycloak-admin-client": "26.0.5",
-      "express": "^4.18.2",
-      "keycloak-connect": "26.0.5"
+        "@keycloak/keycloak-admin-client": "26.0.5",
+        "express": "^4.18.2",
+        "express-session": "^1.18.1",
+        "keycloak-connect": "^26.0.5"
     },
     "devDependencies": {
-      "keycloak-request-token": "^0.1.0"
+        "keycloak-request-token": "^0.1.0"
     }
-  }
+}
